Fix JSON formatting in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "display": "standalone",
   "background_color": "#020617",
   "theme_color": "#020617",
-  "icons": [icon.png]
+  "icons": "icon.png"
 }
+
 
 
